--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
     <link rel="icon" href="./public/images/playboy.ico">
 </head>
 <body>
+    <div class="main-page">
+        <div class="page-bar">
+            <img src="./public/images/top1.jpg" alt="">
+        </div>
+        <div class="page-bar">
+            <img src="./public/images/首页2.png" alt="">
+        </div>
+        <div class="page-bar">
+            <img src="./public/images/首页3.png" alt="">
+        </div>
 
+    </div>
 </body>
 </html>
