--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="main-page">
         <div class="logo"><img src="public/images/logo.png" alt=""></div>
-        <div class="nav"><span class="glyphicon glyphicon-th"></span></div>
+        <div class="nav" id="nav"><span class="glyphicon glyphicon-th"></span></div>
         <div class="page-bar">
             <div class="title"><h1>PLAYBOY</h1></div>
             <!--响应式布局解决图片问题-->
@@ -34,7 +34,23 @@
                 <img src="./public/images/last11.jpg" alt="image description"><!--默认情况显示图片-->
             </picture>
         </div>
-
+        <!--点击导航后显示的盒子-->
+        <div class="nav-page">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4 col-xs-6"><h3><a href="">首页</a></h3></div>
+                    <div class="col-lg-4 col-xs-6"><h3><a href="">登录</a></h3></div>
+                    <div class="col-lg-4 col-xs-6"><h3><a href="">产品</a></h3></div>
+                    <div class="col-lg-4 col-xs-6"><h3><a href="">新闻中心</a></h3></div>
+                    <div class="col-lg-4 col-xs-6"><h3><a href="">加盟</a></h3></div>
+                    <div class="col-lg-4 col-xs-6"><h3><a href="">我们</a></h3></div>
+                </div>
+            </div>
+            <div class="nav-page-footer">
+                <h5>太原科技大学</h5>
+                <p>计算机科学与技术学院软件工程专业</p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
