--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div class="row">
                     <div class="col-lg-4 col-xs-6"><h3><a href="">首页</a></h3></div>
                     <div class="col-lg-4 col-xs-6"><h3><a href="./views/login.html">登录</a></h3></div>
-                    <div class="col-lg-4 col-xs-6"><h3><a href="">产品</a></h3></div>
+                    <div class="col-lg-4 col-xs-6"><h3><a href="./views/clothing.html">服装</a></h3></div>
                     <div class="col-lg-4 col-xs-6"><h3><a href="">新闻中心</a></h3></div>
                     <div class="col-lg-4 col-xs-6"><h3><a href="">加盟</a></h3></div>
                     <div class="col-lg-4 col-xs-6"><h3><a href="">我们</a></h3></div>
