解决背景透明度，照片的响应失真

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="title"><h1>PLAYBOY</h1></div>
             <!--响应式布局解决图片问题-->
             <picture>
-                <source srcset="./public/images/top1.jpg" media="(max-width: 770px)">
+                <source srcset="public/images/top.jpg" media="(max-width: 770px)">
                 <img src="./public/images/top11.jpg" alt="image description"><!--默认情况显示图片-->
             </picture>
         </div>
