导航按钮的点击显示与隐藏

--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
     <link rel="icon" href="./public/images/playboy.ico">
 </head>
 <body>
+<script type="text/javascript" src="./public/js/main-page.js"></script>
     <div class="main-page">
+        <!--商标-->
         <div class="logo"><img src="public/images/logo.png" alt=""></div>
+        <!--导航按钮-->
         <div class="nav" id="nav"><span class="glyphicon glyphicon-th"></span></div>
         <div class="page-bar">
             <div class="title"><h1>PLAYBOY</h1></div>
@@ -35,12 +38,12 @@
             </picture>
         </div>
         <!--点击导航后显示的盒子-->
-        <div class="nav-page">
+        <div class="nav-page hide" id="nav-page" >
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4 col-xs-6"><h3><a href="">首页</a></h3></div>
-                    <div class="col-lg-4 col-xs-6"><h3><a href="./views/login.html">登录</a></h3></div>
-                    <div class="col-lg-4 col-xs-6"><h3><a href="./views/clothing.html">服装</a></h3></div>
+                    <div class="col-lg-4 col-xs-6"><h3><a href="./views/login.html" target="_blank">登录</a></h3></div>
+                    <div class="col-lg-4 col-xs-6"><h3><a href="./views/clothing.html" target="_blank">服装</a></h3></div>
                     <div class="col-lg-4 col-xs-6"><h3><a href="">新闻中心</a></h3></div>
                     <div class="col-lg-4 col-xs-6"><h3><a href="">加盟</a></h3></div>
                     <div class="col-lg-4 col-xs-6"><h3><a href="">我们</a></h3></div>
